# computer-vision-model-calibration

./: Makefile  README.md  main.py  pyproject.toml  ruff.toml
calibrate_cv/: calibrator.py
calibrate_cv/conformal_prediction/: __init__.py  functions.py
calibrate_cv/enum/: calibration_type.py
docs/: uncertainity_conformal_prediction.ipynb
docs/jupyter_notebook/: calibration_via_conformal_prediction.ipynb
scripts/: calibrate_yolo.py  calibrate_yolo_world.py
