[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
exclude = ["images", "test*", "docs"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "calibrate_cv"
version = "0.0.1"
authors = [
  { name="Coargus Engineering Team", email="engineering@coargus.com" },
]
description = "Calibrated computer vision models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cog_cv_imagenet@git+https://github.com/Coargus/image-loader-imagenet.git",
    "pandas",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/Coargus/computer-vision-model-calibration"
"Bug Tracker" = "https://github.com/Coargus/computer-vision-model-calibration"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]